# inspect

./: Dockerfile  LICENSE  README.md  fly.toml  future-vision.html
.github/workflows/: release.yml  test-windows.yml
benchmarks/: run_api_bench.py
benchmarks/martian_results/: api_candidates.json
crates/inspect-api/: Cargo.toml
crates/inspect-api/src/: main.rs  openai.rs  prompts.rs  routes.rs  state.rs  webhook.rs
crates/inspect-cli/src/commands/: diff.rs
crates/inspect-core/src/: analyze.rs  github.rs  risk.rs  types.rs
docs/: package-lock.json  package.json
docs/src/app/api/billing/checkout/: route.ts
docs/src/app/api/billing/test/: route.ts
docs/src/app/api/billing/webhook/: route.ts
docs/src/app/api/review/: route.ts
docs/src/app/dashboard/: layout.tsx
docs/src/app/dashboard/keys/: page.tsx
docs/src/app/dashboard/usage/: page.tsx
docs/src/lib/: stripe.ts
