[package]
name = "inspect-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inspect-api"
path = "src/main.rs"

[dependencies]
inspect-core = { path = "../inspect-core" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", rev = "71a6579" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
urlencoding = "2"
base64 = "0.22"
hmac = "0.12"
hex = "0.4"
constant_time_eq = "0.3"
jsonwebtoken = "9"
